FIX: custom scrollbar

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2680,14 +2680,22 @@ canvas {
 
 .tab-view {
   display: none;
-}
-
-.tab-view.walletHome{
-  padding-top: 90px;
+  transform: translate3d(-100%, 0, 0);
+  width: 100%;
+  position: absolute;
+  padding-top: 45px;
+  top: 0;
+  bottom: 50px;
+  overflow: auto;
 }
 
 .tab-in {
   display: block;
+  transform: translate3d(0, 0, 0) !important;
+}
+
+.tab-out {
+  transform: translate3d(-100%, 0, 0) !important;
 }
 
 .send.tab-in .p-wrap {
@@ -2958,4 +2966,8 @@ p.color_red {
   text-align: center;
   z-index: 2;
   padding: 3px 0;
+}
+
+.mCSB_inside>.mCSB_container{
+  margin-right: 0;
 }
